fix weird extra width on mobile

--- a/src/css/app2.less
+++ b/src/css/app2.less
@@ -80,7 +80,7 @@ body.waiting-for-angular div#initializing-panel {
 }
 
 @media only screen and (max-width: @screen-xs-max) {
-  html {
+  body, html {
     width: 100%;
     overflow-x: hidden;
   }
